@@ -16,6 +16,7 @@
  * Free Software Foundation, Inc., 59 Temple Place, Suite 330,
  * Boston, MA 02111-1307, USA.
  */
+#include	"gobjectalias.h"
 #include	"gboxed.h"
 
 #include	"gbsearcharray.h"
@@ -108,7 +109,7 @@ gstring_free (gpointer boxed)
 }
 
 void
-g_boxed_type_init (void)  /* sync with gtype.c */
+g_boxed_type_init (void) 
 {
   static const GTypeInfo info = {
     0,                          /* class_size */
