@@ -1,12 +1,23 @@
 2004-09-16  Matthias Clasen  <mclasen@redhat.com>
 
+	Implement the same PLT reduction technique used in GTK+:
+
+	* Makefile.am: Generate gobjectalias.h from gobject.symbols.
+	(BUILT_SOURCES): Add gobjectalias.h.
+
+	* makegobjectalias.pl: Script to generate gobjectalias.h.
+
+	* *.c: Include gobjectalias.h
+
+2004-09-16  Matthias Clasen  <mclasen@redhat.com>
+
 	Add ABI control using the same technique that is used in GTK+.
 	
 	* gobject.symbols: Master list of symbols.
 
 	* gobject.def: Removed. It is now generated from gobject.symbols.
 
-	* Makefile.am (gobject.def): Generate from gobject.symbols.
+	* Makefile.am: Generate gobject.def from gobject.symbols.
 	(TESTS): Add abicheck.sh
 	(EXTRA_DIST): Add abicheck.sh
 	(export_symbols): Don't export _-prefixed symbols.
